@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-10-26T08:20:58Z",
-  "count_outdated" : 598,
-  "uniques_outdated" : 342,
-  "count" : 645,
+  "timestamp" : "2022-10-26T16:23:33Z",
+  "count_outdated" : 600,
+  "uniques_outdated" : 343,
+  "count" : 646,
   "uniques" : 369,
   "clones" : [
-    {
-      "timestamp": "2022-10-12T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-10-13T00:00:00Z",
       "count": 3,
