@@ -1,3 +1,11 @@
+2022-10-26T16:23:33Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3330770135 # 971
+* notice: last 14d: unq all: 13 46
+* notice: prev accum: outdated-unq outdated-all / unq all: 342 598 / 369 645
+* notice: next accum: outdated-unq outdated-all / unq all: 343 600 / 369 646
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-10-12] / []
+
 2022-10-26T08:20:58Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3327347169 # 970
 * notice: last 14d: unq all: 13 47
